third_party/move/move-compiler-v2/tests/checking/typing/specs.exp

Diagnostics:
error: expected `bool` but found `u256`
  ┌─ tests/checking/typing/specs.move:5:20
  │
5 │             assert 1;
  │                    ^

error: invalid call of `+`: expected `num` but found `bool` for argument 2
   ┌─ tests/checking/typing/specs.move:10:31
   │
10 │         ensures result == x + true;
   │                               ^^^^
